--- a/Animals Sounds/Base.lproj/LaunchScreen.storyboard
+++ b/Animals Sounds/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +12,50 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lXb-2U-BcQ">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="WM9-gT-Dtl">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <color key="backgroundColor" red="0.96155411010000003" green="0.91502147909999998" blue="0.72601145509999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Carregando" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BFd-Ih-9Lr">
+                                        <rect key="frame" x="162" y="441" width="90" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.96155411010000003" green="0.91502147909999998" blue="0.72601145509999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="WM9-gT-Dtl" secondAttribute="trailing" id="P3R-Sa-d4F"/>
+                                    <constraint firstAttribute="bottom" secondItem="WM9-gT-Dtl" secondAttribute="bottom" id="Q8c-Jy-DW4"/>
+                                    <constraint firstItem="WM9-gT-Dtl" firstAttribute="top" secondItem="lXb-2U-BcQ" secondAttribute="top" id="Zw3-cZ-91Y"/>
+                                    <constraint firstItem="BFd-Ih-9Lr" firstAttribute="top" secondItem="lXb-2U-BcQ" secondAttribute="top" constant="441" id="gcX-TK-dCU"/>
+                                    <constraint firstItem="BFd-Ih-9Lr" firstAttribute="centerX" secondItem="lXb-2U-BcQ" secondAttribute="centerX" id="kYq-fs-dtg"/>
+                                    <constraint firstItem="WM9-gT-Dtl" firstAttribute="leading" secondItem="lXb-2U-BcQ" secondAttribute="leading" id="zq3-nW-Va9"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.96155411010000003" green="0.91502147909999998" blue="0.72601145509999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lXb-2U-BcQ" secondAttribute="trailing" id="HcH-Ix-Dpg"/>
+                            <constraint firstItem="lXb-2U-BcQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Iql-h1-5Bj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="lXb-2U-BcQ" secondAttribute="bottom" id="f3N-2x-YiH"/>
+                            <constraint firstItem="lXb-2U-BcQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="kyS-8X-tT5"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="logo" width="263" height="72"/>
+    </resources>
 </document>
