--- a/Animals Sounds/Base.lproj/Main.storyboard
+++ b/Animals Sounds/Base.lproj/Main.storyboard
@@ -27,34 +27,52 @@
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="8Y2-09-5sF">
                                                 <rect key="frame" x="0.0" y="0.0" width="157" height="586.5"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7wz-J7-N2g">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7wz-J7-N2g">
                                                         <rect key="frame" x="0.0" y="0.0" width="157" height="189"/>
                                                         <state key="normal" image="cao"/>
+                                                        <connections>
+                                                            <action selector="playDog:" destination="BYZ-38-t0r" eventType="touchUpInside" id="72x-DN-ht1"/>
+                                                        </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZn-Vf-Jr4">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VZn-Vf-Jr4">
                                                         <rect key="frame" x="0.0" y="199" width="157" height="188.5"/>
                                                         <state key="normal" image="leao"/>
+                                                        <connections>
+                                                            <action selector="playLion:" destination="BYZ-38-t0r" eventType="touchUpInside" id="7m7-zB-C4p"/>
+                                                        </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DbI-EY-rbT">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DbI-EY-rbT">
                                                         <rect key="frame" x="0.0" y="397.5" width="157" height="189"/>
                                                         <state key="normal" image="ovelha"/>
+                                                        <connections>
+                                                            <action selector="playSheep:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EHc-q8-bh4"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="31x-Zd-XFk">
                                                 <rect key="frame" x="197" y="0.0" width="157" height="586.5"/>
                                                 <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hb-O6-dyj">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7hb-O6-dyj">
                                                         <rect key="frame" x="0.0" y="0.0" width="157" height="189"/>
                                                         <state key="normal" image="gato"/>
+                                                        <connections>
+                                                            <action selector="playCat:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yeg-Jg-JBk"/>
+                                                        </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wgz-Ek-5O0">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wgz-Ek-5O0">
                                                         <rect key="frame" x="0.0" y="199" width="157" height="188.5"/>
                                                         <state key="normal" image="macaco"/>
+                                                        <connections>
+                                                            <action selector="playMonkey:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nd9-H8-wqr"/>
+                                                        </connections>
                                                     </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jir-DY-doM">
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jir-DY-doM">
                                                         <rect key="frame" x="0.0" y="397.5" width="157" height="189"/>
                                                         <state key="normal" image="vaca"/>
+                                                        <connections>
+                                                            <action selector="playCow:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i5f-2j-aMZ"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                             </stackView>
